tests/NormalTests/paczka1/fuzzy1/61101880.err
Error in line 1: Oq9JZ A738 15,9
Error in line 9: b4gbG46 A723 36,2
Error in line 15: w2SP0cN0irj A738 100,0
Error in line 29: fpGU0 A738 44,7
Error in line 32: A723 A535 84,7
Error in line 37: okKNb A535 8,9
